# duck_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
duck_main/: .gitignore  Cargo.toml
duck_main/src/: dataframe.rs  lib.rs  main.rs  tests_dataframe.rs
src/: cell.rs  dataframe.rs  element.rs  lib.rs  macros.rs  series.rs  tests_dataframe.rs  types.rs
src/algebraic/: matrix.rs
src/dataframe/: mod.rs  operations.rs  science.rs  tests_dataframe.rs
src/math/: math.rs
src/tests/: mod.rs  tests_dataframe.rs
src/utils/: math.rs
