[package]
name = "duck_main"
version = "0.1.0"
authors = ["mkubasz <mkubasz@gmail.com>"]
edition = "2018"

[dependencies]
rustlearn = '0.5.0'
ndarray = '0.12.1'
csv = '1.1.1'
num-traits = '0.2'
autograd = { version = "0.9.5", features = ["mkl"] }
criterion = '0.3.0'
[[bench]]
name = "benchmark"
harness = false
